// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (0) 1`] = `
[
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "1",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "1",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "long": true,
      "option": "Option(-M | --max <n>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "long": true,
      "option": "Option(-M | --max <n>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "type": "operand",
      "value": "26",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "type": "operand",
      "value": "26",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 5,
        "_index": 6,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "long": true,
      "option": "Option(-m | --min <n>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 6,
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "type": "flag",
      "value": "--min",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 5,
        "_index": 6,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "long": true,
      "option": "Option(-m | --min <n>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 6,
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "type": "flag",
      "value": "--min",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 7,
        "column": 17,
        "line": 1,
        "offset": 16,
      },
      "start": {
        "_bufferIndex": 6,
        "_index": 6,
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 7,
        "column": 17,
        "line": 1,
        "offset": 16,
      },
      "start": {
        "_bufferIndex": 6,
        "_index": 6,
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "type": "operand",
      "value": "13",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (1) 1`] = `
[
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "9",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "9",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 2,
        "_index": 2,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "option": "Option(-M | --max <n>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 2,
        "_index": 2,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "option": "Option(-M | --max <n>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "_bufferIndex": 3,
        "_index": 2,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "type": "operand",
      "value": "26",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "_bufferIndex": 3,
        "_index": 2,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "type": "operand",
      "value": "26",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (2) 1`] = `
[
  [
    "enter",
    {
      "attached": false,
      "command": "Command(clamp)",
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "clamp",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "command": "Command(clamp)",
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "clamp",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "long": true,
      "option": "Option(-M | --max <n>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "long": true,
      "option": "Option(-M | --max <n>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 7,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 6,
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 7,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 6,
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 5,
        "_index": 8,
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "long": true,
      "option": "Option(-m | --min <n>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 8,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "type": "flag",
      "value": "--min",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 5,
        "_index": 8,
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "long": true,
      "option": "Option(-m | --min <n>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 8,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "type": "flag",
      "value": "--min",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 9,
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "start": {
        "_bufferIndex": 6,
        "_index": 8,
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "type": "operand",
      "value": "",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 9,
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "start": {
        "_bufferIndex": 6,
        "_index": 8,
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "type": "operand",
      "value": "",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (3) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 2,
        "_index": 0,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "option": "Option(-M | --max <n>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 2,
        "_index": 0,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "option": "Option(-M | --max <n>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "_bufferIndex": 2,
        "_index": 0,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "_bufferIndex": 2,
        "_index": 0,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 2,
        "_index": 2,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "option": "Option(-m | --min <n>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 2,
        "_index": 2,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "option": "Option(-m | --min <n>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "_bufferIndex": 2,
        "_index": 2,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "type": "operand",
      "value": "-1",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "_bufferIndex": 2,
        "_index": 2,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "type": "operand",
      "value": "-1",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "type": "delimiter",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "type": "delimiter",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 7,
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 6,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "type": "operand",
      "value": "-13",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 7,
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 6,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "type": "operand",
      "value": "-13",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (4) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "long": true,
      "option": "Option(-m --mask <>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "--mask",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "long": true,
      "option": "Option(-m --mask <>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "--mask",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "type": "operand",
      "value": "isoDate",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "type": "operand",
      "value": "isoDate",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (5) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "option": "Option(-g | --gmt)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-g",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "option": "Option(-g | --gmt)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-g",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "_bufferIndex": 3,
        "_index": 0,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "option": "Option(-m --mask <>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "_bufferIndex": 3,
        "_index": 0,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "option": "Option(-m --mask <>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": {
        "_bufferIndex": 3,
        "_index": 0,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "type": "operand",
      "value": "isoDate",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": {
        "_bufferIndex": 3,
        "_index": 0,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "type": "operand",
      "value": "isoDate",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 68,
        "line": 1,
        "offset": 67,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "type": "operand",
      "value": "Thu Mar 13 2025 00:00:00 GMT-0400 (Eastern Daylight Time)",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 68,
        "line": 1,
        "offset": 67,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "type": "operand",
      "value": "Thu Mar 13 2025 00:00:00 GMT-0400 (Eastern Daylight Time)",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (6) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "option": "Option(-g | --gmt)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-g",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "option": "Option(-g | --gmt)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-g",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "option": "Option(-u | --utc)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-u",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "option": "Option(-u | --utc)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-u",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "option": "Option(-m --mask <>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "option": "Option(-m --mask <>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (7) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 3,
        "_index": 0,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "option": "Option(-u | --utc)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-u",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 3,
        "_index": 0,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "option": "Option(-u | --utc)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-u",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "_bufferIndex": 3,
        "_index": 0,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "option": "Option(-m --mask <>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "_bufferIndex": 3,
        "_index": 0,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "option": "Option(-m --mask <>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "_bufferIndex": 4,
        "_index": 0,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "type": "operand",
      "value": "isoTime",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "_bufferIndex": 4,
        "_index": 0,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "type": "operand",
      "value": "isoTime",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 69,
        "line": 1,
        "offset": 68,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "type": "operand",
      "value": "Thu Mar 13 2025 00:00:00 GMT-0400 (Eastern Daylight Time)",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 69,
        "line": 1,
        "offset": 68,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "type": "operand",
      "value": "Thu Mar 13 2025 00:00:00 GMT-0400 (Eastern Daylight Time)",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (8) 1`] = `
[
  [
    "enter",
    {
      "attached": false,
      "command": "Command(resolve)",
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "resolve",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "command": "Command(resolve)",
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "resolve",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 26,
        "line": 1,
        "offset": 25,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "type": "operand",
      "value": "#internal/tokenize",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 26,
        "line": 1,
        "offset": 25,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "type": "operand",
      "value": "#internal/tokenize",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 8,
        "_index": 4,
        "column": 34,
        "line": 1,
        "offset": 33,
      },
      "long": true,
      "option": "Option(-p | --parent <!>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 26,
        "line": 1,
        "offset": 25,
      },
      "type": "flag",
      "value": "--parent",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 8,
        "_index": 4,
        "column": 34,
        "line": 1,
        "offset": 33,
      },
      "long": true,
      "option": "Option(-p | --parent <!>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 26,
        "line": 1,
        "offset": 25,
      },
      "type": "flag",
      "value": "--parent",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 36,
        "line": 1,
        "offset": 35,
      },
      "start": {
        "_bufferIndex": 9,
        "_index": 4,
        "column": 35,
        "line": 1,
        "offset": 34,
      },
      "type": "operand",
      "value": ".",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 36,
        "line": 1,
        "offset": 35,
      },
      "start": {
        "_bufferIndex": 9,
        "_index": 4,
        "column": 35,
        "line": 1,
        "offset": 34,
      },
      "type": "operand",
      "value": ".",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (9) 1`] = `
[
  [
    "enter",
    {
      "attached": false,
      "command": "Command(resolve)",
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "resolve",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "command": "Command(resolve)",
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "resolve",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "type": "operand",
      "value": "#lib/command",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "type": "operand",
      "value": "#lib/command",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 12,
        "_index": 4,
        "column": 32,
        "line": 1,
        "offset": 31,
      },
      "long": true,
      "option": "Option(-c | --conditions <...>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "type": "flag",
      "value": "--conditions",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 12,
        "_index": 4,
        "column": 32,
        "line": 1,
        "offset": 31,
      },
      "long": true,
      "option": "Option(-c | --conditions <...>)",
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "type": "flag",
      "value": "--conditions",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 38,
        "line": 1,
        "offset": 37,
      },
      "start": {
        "_bufferIndex": 13,
        "_index": 4,
        "column": 33,
        "line": 1,
        "offset": 32,
      },
      "type": "operand",
      "value": [
        "kronk",
        "development",
        "node",
      ],
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 38,
        "line": 1,
        "offset": 37,
      },
      "start": {
        "_bufferIndex": 13,
        "_index": 4,
        "column": 33,
        "line": 1,
        "offset": 32,
      },
      "type": "operand",
      "value": [
        "kronk",
        "development",
        "node",
      ],
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 2,
        "_index": 6,
        "column": 40,
        "line": 1,
        "offset": 39,
      },
      "option": "Option(-p | --parent <!>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 6,
        "column": 38,
        "line": 1,
        "offset": 37,
      },
      "type": "flag",
      "value": "-p",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 2,
        "_index": 6,
        "column": 40,
        "line": 1,
        "offset": 39,
      },
      "option": "Option(-p | --parent <!>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 6,
        "column": 38,
        "line": 1,
        "offset": 37,
      },
      "type": "flag",
      "value": "-p",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 7,
        "column": 41,
        "line": 1,
        "offset": 40,
      },
      "start": {
        "_bufferIndex": 2,
        "_index": 6,
        "column": 40,
        "line": 1,
        "offset": 39,
      },
      "type": "operand",
      "value": ".",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 7,
        "column": 41,
        "line": 1,
        "offset": 40,
      },
      "start": {
        "_bufferIndex": 2,
        "_index": 6,
        "column": 40,
        "line": 1,
        "offset": 39,
      },
      "type": "operand",
      "value": ".",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 11,
        "column": 59,
        "line": 1,
        "offset": 58,
      },
      "long": true,
      "option": "Option(--ps | --preserve-symlinks)",
      "start": {
        "_bufferIndex": 0,
        "_index": 10,
        "column": 55,
        "line": 1,
        "offset": 54,
      },
      "type": "flag",
      "value": "--ps",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 11,
        "column": 59,
        "line": 1,
        "offset": 58,
      },
      "long": true,
      "option": "Option(--ps | --preserve-symlinks)",
      "start": {
        "_bufferIndex": 0,
        "_index": 10,
        "column": 55,
        "line": 1,
        "offset": 54,
      },
      "type": "flag",
      "value": "--ps",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (10) 1`] = `
[
  [
    "enter",
    {
      "attached": false,
      "command": "Command(smallest-num)",
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "sn",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "command": "Command(smallest-num)",
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "sn",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "type": "operand",
      "value": "1",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "type": "operand",
      "value": "1",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "type": "operand",
      "value": "3",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (11) 1`] = `
[
  [
    "enter",
    {
      "attached": false,
      "command": "Command(join)",
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "join",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "command": "Command(join)",
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "join",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": 2,
        "_index": 2,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "option": "Option(-s, --separator <char>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": 2,
        "_index": 2,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "option": "Option(-s, --separator <char>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "_bufferIndex": 2,
        "_index": 2,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "type": "operand",
      "value": "...",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "_bufferIndex": 2,
        "_index": 2,
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "type": "operand",
      "value": "...",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "type": "operand",
      "value": "a...z",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "type": "operand",
      "value": "a...z",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (12) 1`] = `
[
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 3,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 2,
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "option": "Option(-d | --debug)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "type": "flag",
      "value": "-d",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "option": "Option(-d | --debug)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "type": "flag",
      "value": "-d",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "_bufferIndex": 3,
        "_index": 4,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "option": "Option(-n\\t<!>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "_bufferIndex": 3,
        "_index": 4,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "option": "Option(-n\\t<!>)",
      "short": true,
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "_bufferIndex": 3,
        "_index": 4,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "_bufferIndex": 3,
        "_index": 4,
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 7,
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 6,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "_bufferIndex": -1,
        "_index": 7,
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 6,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "type": "operand",
      "value": "3",
    },
  ],
]
`;
